update to changes of parameter hints provider